--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@risingstack/v8-profiler",
-  "version": "5.7.4",
+  "version": "5.7.8",
   "description": "node bindings for the v8 profiler",
   "homepage": "http://github.com/RisingStack/v8-profiler",
   "author": "Danny Coates <dannycoates@gmail.com>",
@@ -39,7 +39,7 @@
   "main": "v8-profiler",
   "dependencies": {
     "nan": "^2.5.1",
-    "node-pre-gyp": "^0.6.34"
+    "@risingstack/node-pre-gyp": "^0.6.35"
   },
   "devDependencies": {
     "aws-sdk": "^2.0.0",
