--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,11 @@ git:
   depth: 1
 
 before_install:
+  - if [ $TRAVIS_OS_NAME == "linux" ]; then
+      export CC=/usr/bin/gcc-4.9;
+      export CXX=/usr/bin/g++-4.9;
+    fi
+
   - rm -rf ~/.nvm/ && git clone --depth 1 "https://github.com/creationix/nvm.git" ~/.nvm
   - source ~/.nvm/nvm.sh
   - nvm install $NODE_VERSION
